Fix for bad z-index behavior

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 html {
   background-color: #111214;
+  user-select: none;
 }
 
 .App {
@@ -11,19 +12,4 @@ html {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-footer {
-  /* position: absolute; */
-  /* bottom: 12px; */
-  padding-top: 2px;
-  z-index: -3;
-
-  color: #333;
-  font-family: monospace;
-  font-size: 0.5em;
-}
-
-footer .highlight {
-  color: #bbb;
 }
